<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.authentication.AuthenticationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical"
            android:text="@string/welcome"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical"
            android:lines="2"
            android:text="@string/welcome_instruction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_outlined_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"

            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeTextType="uniform"
                android:inputType="text"
                android:text="MikhailGureev" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_outlined_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeTextType="uniform"
                android:inputType="textPassword"
                android:text="0000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/error_message_material_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:lines="2"
            android:text="@string/incorrect_login_and_password"
            android:textColor="@color/design_default_color_error"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:text="@string/enter" />
    </LinearLayout>


</FrameLayout>
