<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.authentication.AuthenticationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical"
            android:text="@string/welcome"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical"
            android:lines="2"
            android:text="@string/welcome_instruction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_outlined_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:hint="@string/login"
            android:textColorHint="@color/textColorHint"
            app:boxStrokeColor="@color/strokeColor"
            app:hintTextColor="@color/textColorHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeTextType="uniform"
                android:inputType="text"
                android:text="MikhailGureev"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_outlined_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:textColorHint="@color/textColorHint"
            app:boxStrokeColor="@color/strokeColor"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/textColorHint"
            app:hintTextColor="@color/textColorHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeTextType="uniform"
                android:inputType="textPassword"
                android:text="0000"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/error_message_material_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeTextType="uniform"
            android:lines="2"
            android:text="@string/incorrect_login_and_password"
            android:textColor="@color/design_default_color_error"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeTextType="uniform"
            android:text="@string/enter"
            android:textColor="@color/selectedText"
            app:backgroundTint="@color/selectedButton" />
    </LinearLayout>


</FrameLayout>
